# gmc

./: .gitignore  LICENCE  README.md  build.md  config.yaml  gmc.spec  gmc_arg_funcs.py  gmc_config.py  gmc_core.py  gmc_core.spec  gmc_emojis.py  gmc_helper_classes.py  linux_build  public_config.yaml  pyproject.toml  requirements.txt
build_scripts/: build_completly  build_linux  build_windows  linux_build_n_install
scripts/: build_linux  build_windows  linux_build_n_install
