[project]
name = "gmc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "liquidiert", email = "haberederkorbinian@googlemail.com" }
]
dependencies = [
    "black>=24.4.0",
    "art>=6.1",
    "appdirs>=1.4.4",
    "pyinstaller>=6.6.0",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gmc_core"]
