[tool.poetry]
name = "gmc"
version = "0.15.0"
description = "A handy git commit formatter"
authors = ["Korbinian Habereder"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
black = "^24.4.2"
art = "^6.2"
pyyaml = "^6.0.1"
pyinstaller = "^6.6.0"
appdirs = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
